Fixed invalid min and max dates for calendar.

--- a/index.html
+++ b/index.html
@@ -24,14 +24,12 @@
         <p>When will you be traveling?</p>
 
         <form action="/action_page.php">
-
             <div class="container">
-
                 <div class="row">
                     <div class="col">
                         Start Date:
                         <br>
-                        <input id="startDate" type="date" name="startDate" min="2001-12-31" max="2028-12-31">
+                        <input id="startDate" type="date" name="startDate" min="2018-01-01" max="2028-12-01" value="2018-01-01">
                         <br>
                         <br>
                     </div>
@@ -39,7 +37,7 @@
                     <div class="col">
                         End Date:
                         <br>
-                        <input id="endDate" type="date" name="endDate" min="0000-00-00" max="0000-00-00">
+                        <input id="endDate" type="date" name="endDate" min="2018-01-01" max="2028-12-01" value="2018-01-01">
                         <br>
                         <br>
                     </div>
@@ -47,7 +45,6 @@
             </div>
 
             <div class="container">
-
                 <div class="row">
                     <div class="col-4-lg">
                         Cold Weather Activities:
@@ -82,7 +79,6 @@
                                 </div>
                                 <input type="text" class="form-control" aria-label="Text input with dropdown button">
                             </div>
-
                         </div>
                         <div class="col-4-lg">
                             Other:
@@ -100,23 +96,19 @@
                                 </div>
                                 <input type="text" class="form-control" aria-label="Text input with dropdown button">
                             </div>
-
                         </div>
                     </div>
                 </div>
             </div>
-
         </form>
 
-        <p class="lead">
-
+        <div class="lead">
             <div class="row">
                 <div class="col">
                     <a class="btn btn-danger btn-lg" href="#" role="button">Submit</a>
                 </div>
             </div>
-
-        </p>
+        </div>
     </div>
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
