--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 </div>
             </div>
 
-            <div class="lead">
+            <div>
                 <div class="row">
                     <div class="col">
                         <a class="btn btn-danger btn-lg my-2" href="#" role="button">Submit</a>
