--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
     <link rel="shortcut icon" type="image/png" href="./assets/images/favicon.png">
+    <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 
 <body>
@@ -74,7 +76,7 @@
             <div class="lead">
                 <div class="row">
                     <div class="col">
-                        <a class="btn btn-danger btn-lg my-2" href="#" role="button">Submit</a>
+                        <form id="submit" class="btn btn-danger btn-lg my-2" href="#" role="button">Submit</form>
                     </div>
                 </div>
             </div>
@@ -103,7 +105,7 @@
                         <small class="form-text">We'll never share your email with anyone else.</small>
                     </div>
                     <div class="col-auto">
-                        <button type="submit" class="btn btn-danger">Submit</button>
+                        <button type="submit" id="emailSubmit" class="btn btn-danger">Submit</button>
                     </div>
             </form>
             </div>
