adjusted weather display and weather APIs

--- a/index.html
+++ b/index.html
@@ -225,35 +225,28 @@
                                     <br> Light Clouds
                                 </td>
                                 <td>
-                                    <strong>Today</strong>
+                                    <strong>30 Hours</strong>
                                     <img src="http://openweathermap.org/img/w/01d.png">
                                     <br> High: 79&#8457
                                     <br> Low: 59&#8457
                                     <br> Light Clouds
                                 </td>
                                 <td>
-                                    <strong>Mar 23</strong>
+                                    <strong>60 Hours</strong>
                                     <img src="http://openweathermap.org/img/w/01d.png">
                                     <br> High: 79&#8457
                                     <br> Low: 59&#8457
                                     <br> Light Clouds
                                 </td>
                                 <td>
-                                    <strong>Mar 24</strong>
+                                    <strong>90 Hours</strong>
                                     <img src="http://openweathermap.org/img/w/01d.png">
                                     <br> High: 79&#8457
                                     <br> Low: 59&#8457
                                     <br> Light Clouds
                                 </td>
                                 <td>
-                                    <strong>Mar 25</strong>
-                                    <img src="http://openweathermap.org/img/w/01d.png">
-                                    <br> High: 79&#8457
-                                    <br> Low: 59&#8457
-                                    <br> Light Clouds
-                                </td>
-                                <td>
-                                    <strong>Mar 26</strong>
+                                    <strong>120 Hours</strong>
                                     <img src="http://openweathermap.org/img/w/01d.png">
                                     <br> High: 79&#8457
                                     <br> Low: 59&#8457
@@ -262,42 +255,35 @@
                             </tr>
                             <tr>
                                 <td>
-                                    <strong>Boulder</strong>
+                                    <strong>BOULDER</strong>
                                     <img src="http://openweathermap.org/img/w/01d.png">
                                     <br> Currently: 79&#8457
                                     <br> Wind: 10 mph
                                     <br> Light Clouds
                                 </td>
                                 <td>
-                                    <strong>Today</strong>
+                                    <strong>30 Hours</strong>
                                     <img src="http://openweathermap.org/img/w/01d.png">
                                     <br> High: 79&#8457
                                     <br> Low: 59&#8457
                                     <br> Light Clouds
                                 </td>
                                 <td>
-                                    <strong>Mar 23</strong>
+                                    <strong>60 Hours</strong>
                                     <img src="http://openweathermap.org/img/w/01d.png">
                                     <br> High: 79&#8457
                                     <br> Low: 59&#8457
                                     <br> Light Clouds
                                 </td>
                                 <td>
-                                    <strong>Mar 24</strong>
+                                    <strong>90 Hours</strong>
                                     <img src="http://openweathermap.org/img/w/01d.png">
                                     <br> High: 79&#8457
                                     <br> Low: 59&#8457
                                     <br> Light Clouds
                                 </td>
                                 <td>
-                                    <strong>Mar 25</strong>
-                                    <img src="http://openweathermap.org/img/w/01d.png">
-                                    <br> High: 79&#8457
-                                    <br> Low: 59&#8457
-                                    <br> Light Clouds
-                                </td>
-                                <td>
-                                    <strong>Mar 26</strong>
+                                    <strong>120 Hours</strong>
                                     <img src="http://openweathermap.org/img/w/01d.png">
                                     <br> High: 79&#8457
                                     <br> Low: 59&#8457
@@ -306,42 +292,35 @@
                             </tr>
                             <tr>
                                 <td>
-                                    <strong>Aspen</strong>
+                                    <strong>ASPEN</strong>
                                     <img src="http://openweathermap.org/img/w/01d.png">
                                     <br> Currently: 79&#8457
                                     <br> Wind: 10 mph
                                     <br> Light Clouds
                                 </td>
                                 <td>
-                                    <strong>Today</strong>
+                                    <strong>30 Hours</strong>
                                     <img src="http://openweathermap.org/img/w/01d.png">
                                     <br> High: 79&#8457
                                     <br> Low: 59&#8457
                                     <br> Light Clouds
                                 </td>
                                 <td>
-                                    <strong>Mar 23</strong>
+                                    <strong>60 Hours</strong>
                                     <img src="http://openweathermap.org/img/w/01d.png">
                                     <br> High: 79&#8457
                                     <br> Low: 59&#8457
                                     <br> Light Clouds
                                 </td>
                                 <td>
-                                    <strong>Mar 24</strong>
+                                    <strong>90 Hours</strong>
                                     <img src="http://openweathermap.org/img/w/01d.png">
                                     <br> High: 79&#8457
                                     <br> Low: 59&#8457
                                     <br> Light Clouds
                                 </td>
                                 <td>
-                                    <strong>Mar 25</strong>
-                                    <img src="http://openweathermap.org/img/w/01d.png">
-                                    <br> High: 79&#8457
-                                    <br> Low: 59&#8457
-                                    <br> Light Clouds
-                                </td>
-                                <td>
-                                    <strong>Mar 26</strong>
+                                    <strong>120 Hours</strong>
                                     <img src="http://openweathermap.org/img/w/01d.png">
                                     <br> High: 79&#8457
                                     <br> Low: 59&#8457
