trying to get the weather display to work properly

--- a/index.html
+++ b/index.html
@@ -78,46 +78,46 @@
                             <div class="Options">
                                 <div class="row">
                                     <div class="col">
-                                        <input type="checkbox" name="warm" value="1"> Aspen
+                                        <input type="checkbox" class="locationBtn" name="warm" value="Aspen"> Aspen
                                     </div>
                                     <div class="col">
-                                        <input type="checkbox" name="warm" value="2"> Boulder
+                                        <input type="checkbox" class="locationBtn" name="warm" value="Boulder"> Boulder
                                     </div>
                                     <div class="col">
-                                        <input type="checkbox" name="warm" value="3"> Breckenridge
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col">
-                                        <input type="checkbox" name="warm" value="4"> Denver
-                                    </div>
-                                    <div class="col">
-                                        <input type="checkbox" name="warm" value="5"> Dillon
-                                    </div>
-                                    <div class="col">
-                                        <input type="checkbox" name="warm" value="6"> Durango
+                                        <input type="checkbox" class="locationBtn" name="warm" value="Breckenridge"> Breckenridge
                                     </div>
                                 </div>
                                 <div class="row">
                                     <div class="col">
-                                        <input type="checkbox" name="warm" value="7"> Estes Park
+                                        <input type="checkbox" class="locationBtn" name="warm" value="Denver"> Denver
                                     </div>
                                     <div class="col">
-                                        <input type="checkbox" name="warm" value="8"> Golden
+                                        <input type="checkbox" class="locationBtn" name="warm" value="Dillon"> Dillon
                                     </div>
                                     <div class="col">
-                                        <input type="checkbox" name="warm" value="9"> Grand Junction
+                                        <input type="checkbox" class="locationBtn" name="warm" value="Durango"> Durango
                                     </div>
                                 </div>
                                 <div class="row">
                                     <div class="col">
-                                        <input type="checkbox" name="warm" value="10"> Pueblo
+                                        <input type="checkbox" class="locationBtn" name="warm" value="Estes+Park"> Estes Park
                                     </div>
                                     <div class="col">
-                                        <input type="checkbox" name="warm" value="11"> Steamboat
+                                        <input type="checkbox" class="locationBtn" name="warm" value="Golden"> Golden
                                     </div>
                                     <div class="col">
-                                        <input type="checkbox" name="warm" value="12"> Vail
+                                        <input type="checkbox" class="locationBtn" name="warm" value="Grand+Junction"> Grand Junction
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col">
+                                        <input type="checkbox" class="locationBtn" name="warm" value="Pueblo"> Pueblo
+                                    </div>
+                                    <div class="col">
+                                        <input type="checkbox" class="locationBtn" name="warm" value="Steamboat"> Steamboat
+                                    </div>
+                                    <div class="col">
+                                        <input type="checkbox" class="locationBtn" name="warm" value="Vail"> Vail
                                     </div>
                                 </div>
 
@@ -225,21 +225,21 @@
                                     <br> Light Clouds
                                 </td>
                                 <td>
-                                    <strong>30 Hours</strong>
+                                    <strong>24 Hours</strong>
                                     <img src="http://openweathermap.org/img/w/01d.png">
                                     <br> High: 79&#8457
                                     <br> Low: 59&#8457
                                     <br> Light Clouds
                                 </td>
                                 <td>
-                                    <strong>60 Hours</strong>
+                                    <strong>48 Hours</strong>
                                     <img src="http://openweathermap.org/img/w/01d.png">
                                     <br> High: 79&#8457
                                     <br> Low: 59&#8457
                                     <br> Light Clouds
                                 </td>
                                 <td>
-                                    <strong>90 Hours</strong>
+                                    <strong>72 Hours</strong>
                                     <img src="http://openweathermap.org/img/w/01d.png">
                                     <br> High: 79&#8457
                                     <br> Low: 59&#8457
@@ -262,21 +262,21 @@
                                     <br> Light Clouds
                                 </td>
                                 <td>
-                                    <strong>30 Hours</strong>
+                                    <strong>24 Hours</strong>
                                     <img src="http://openweathermap.org/img/w/01d.png">
                                     <br> High: 79&#8457
                                     <br> Low: 59&#8457
                                     <br> Light Clouds
                                 </td>
                                 <td>
-                                    <strong>60 Hours</strong>
+                                    <strong>48 Hours</strong>
                                     <img src="http://openweathermap.org/img/w/01d.png">
                                     <br> High: 79&#8457
                                     <br> Low: 59&#8457
                                     <br> Light Clouds
                                 </td>
                                 <td>
-                                    <strong>90 Hours</strong>
+                                    <strong>72 Hours</strong>
                                     <img src="http://openweathermap.org/img/w/01d.png">
                                     <br> High: 79&#8457
                                     <br> Low: 59&#8457
@@ -299,21 +299,21 @@
                                     <br> Light Clouds
                                 </td>
                                 <td>
-                                    <strong>30 Hours</strong>
+                                    <strong>24 Hours</strong>
                                     <img src="http://openweathermap.org/img/w/01d.png">
                                     <br> High: 79&#8457
                                     <br> Low: 59&#8457
                                     <br> Light Clouds
                                 </td>
                                 <td>
-                                    <strong>60 Hours</strong>
+                                    <strong>48 Hours</strong>
                                     <img src="http://openweathermap.org/img/w/01d.png">
                                     <br> High: 79&#8457
                                     <br> Low: 59&#8457
                                     <br> Light Clouds
                                 </td>
                                 <td>
-                                    <strong>90 Hours</strong>
+                                    <strong>72 Hours</strong>
                                     <img src="http://openweathermap.org/img/w/01d.png">
                                     <br> High: 79&#8457
                                     <br> Low: 59&#8457
