--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
         </div>
 
         <div class="location p-2 m-1">
-            <h2>My Google Map</h2>
+            <h2>Map</h2>
             <div id="map">
             </div>
         </div>
@@ -215,6 +215,7 @@
                 <div class="newWeather row">
                     <table class="table table-hover">
                         <tbody id=weatherWidget>
+                            <h6 class="pl-3 pt-3 text-center" id="selectMessage">Please Select At Least One Location</h6>
                         </tbody>
                     </table>
                 </div>
