moved weather and map

--- a/index.html
+++ b/index.html
@@ -201,13 +201,7 @@
             </div> -->
         </div>
 
-        <div class="location p-2 m-1">
-            <h2>Map</h2>
-            <div id="map">
-            </div>
-        </div>
-
-        <div class="card">
+        <div id="weatherDisplay" class="card">
             <div class="card-header weather p-2 mt-1 mx-1 text-left">
                 <h4>Weather Information</h4>
             </div>
@@ -215,10 +209,16 @@
                 <div class="newWeather row">
                     <table class="table table-hover">
                         <tbody id=weatherWidget>
-                            <h6 class="pl-3 pt-3 text-center" id="selectMessage">Please Select At Least One Location</h6>
+                            <h6 class="pl-3 pt-3 text-center" id="selectMessage">Please select at least one location from the list above</h6>
                         </tbody>
                     </table>
                 </div>
+            </div>
+        </div>
+
+        <div class="location p-2 m-1">
+            <h2>Map</h2>
+            <div id="map">
             </div>
         </div>
 
